--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -7,18 +7,18 @@
 	class="mb-10 flex flex-col items-center justify-center lg:mb-0 lg:h-screen lg:flex-row"
 >
 	<div class="mb-10 flex w-full flex-col items-center justify-center lg:mb-0 lg:w-1/2">
-		<h2 class="font-monospace text-2xl text-orange lg:text-4xl">About me</h2>
+		<h2 class="font-monospace text-2xl text-orange lg:text-4xl">Sobre mí</h2>
 		<span class="mb-6 ml-2 h-1 w-10 bg-orange"></span>
 	</div>
 
 	<div class="w-full text-justify text-black dark:text-white lg:w-1/2">
 		<p class="mb-2">
-			Here is your description in English! Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-			sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-			irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-			Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-			id est laborum
+			Soy David Avalos Loya, un entusiasta del desarrollo de software con una pasión por resolver
+			problemas y crear soluciones innovadoras. Desde mis inicios, he explorado y dominado diversas
+			tecnologías, desde el desarrollo frontend con HTML, CSS y JavaScript/TS hasta el backend con
+			Node.js, Express y bases de datos relacionales y no relacionales. Incluso, he incursionado en
+			el desarrollo móvil con herramientas como React Native. Además, mi interés por las redes,
+			GNU/Linux y el cloud computing complementan mis habilidades técnicas.
 		</p>
 	</div>
 </section>
