--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,8 +11,7 @@ import Button from '@components/ui/Button.astro';
 	<div class="mb-10 flex flex-col items-center lg:mb-0 lg:w-1/2">
 		<div>
 			<h1 class="mb-10 font-monospace text-3xl text-black dark:text-white lg:text-5xl">
-				Hi! My name is <span class="text-orange">Jane Doe</span> and I am a web developer based in New
-				York.
+				¡Hola! Soy <span class="text-orange"> David Avalos Loya</span>, un apasionado desarrollador Full Stack dedicado a convertir ideas en realidad a través del código.
 			</h1>
 		</div>
 		<div class="mb-10">
