--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,15 +5,15 @@ import { Astronav, MenuIcon, MenuItems } from 'astro-navbar';
 
 const menuitems = [
 	{
-		title: 'About',
+		title: 'Sobre mí',
 		path: '#about',
 	},
 	{
-		title: 'Projects',
+		title: 'Proyectos',
 		path: '#projects',
 	},
 	{
-		title: 'Contact',
+		title: 'Contacto',
 		path: '#contact',
 	},
 ];
