--- a/src/components/ui/Social.astro
+++ b/src/components/ui/Social.astro
@@ -4,13 +4,13 @@ import { Icon } from 'astro-icon';
 
 <a href="https://github.com/DAvalos36" target="_blank" rel="noopener" aria-label="github"
 	><Icon
-		class="h-8 hover:text-orange dark:hover:text-orange md:h-12"
+		class="h-8 hover:text-[#7828C8] dark:hover:text-[#7828C8] md:h-12"
 		name="simple-icons:github"
 	/></a
 >
 <a href="https://www.linkedin.com/in/david-oct-avalos-loya" target="_blank" rel="noopener" aria-label="linkedin"
 	><Icon
-		class="h-8 hover:text-orange dark:hover:text-orange md:h-12"
+		class="h-8 hover:text-[#7828C8] dark:hover:text-[#7828C8] md:h-12"
 		name="simple-icons:linkedin"
 	/></a
 >
