--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -36,7 +36,7 @@ const menuitems = [
 								<a
 									aria-label="navigation link"
 									href={item.path}
-									class="flex py-2 text-black hover:text-orange dark:text-white dark:hover:text-orange lg:px-3"
+									class="flex py-2 text-black hover:text-[#7828C8] dark:text-white dark:hover:text-[#7828C8] lg:px-3"
 								>
 									{item.title}
 								</a>
