--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -12,8 +12,8 @@ const projects = await getCollection('projects', ({ data }) => {
 	id="projects"
 	class="mb-10 flex flex-col items-center justify-center md:mb-0 md:h-screen"
 >
-	<h2 class="font-monospace text-2xl text-orange lg:text-4xl">Proyectos</h2>
-	<span class="mb-10 h-1 w-10 bg-orange"></span>
+	<h2 class="font-monospace text-2xl text-[#7828C8] lg:text-4xl">Proyectos</h2>
+	<span class="mb-10 h-1 w-10 bg-[#7828C8]"></span>
 	<div class="mb-10 flex w-full flex-col flex-wrap items-center md:flex-row">
 		{
 			projects.map((project) => (
@@ -31,7 +31,7 @@ const projects = await getCollection('projects', ({ data }) => {
 		href="https://github.com/"
 		target="_blank"
 		rel="noopener"
-		class="flex flex-row text-black hover:text-orange dark:text-white dark:hover:text-orange"
+		class="flex flex-row text-black hover:text-[#7828C8] dark:text-white dark:hover:text-[#7828C8]"
 		aria-label="link to repository"
 	>
 		¡Ver más proyectos!
